# practice-hse-web

./: .gitignore  .pre-commit-config.yaml  data.json  database.sql  er_diagram.md  main.py  pyproject.toml  requirements.txt
templates/: create_post.html  edit_post.html  index.html  post.html
